kubernetes/cloudformation/out/cloudformation/kubernetes.json
{
  "Resources": {
    "AWSAutoScalingAutoScalingGroupmasteruseast1amastersappsleiteiroappcom": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "LaunchConfigurationName": {
          "Ref": "AWSAutoScalingLaunchConfigurationmasteruseast1amastersappsleiteiroappcom"
        },
        "MaxSize": 1,
        "MinSize": 1,
        "VPCZoneIdentifier": [
          {
            "Ref": "AWSEC2Subnetuseast1aappsleiteiroappcom"
          }
        ],
        "Tags": [
          {
            "Key": "KubernetesCluster",
            "Value": "apps.leiteiroapp.com",
            "PropagateAtLaunch": true
          },
          {
            "Key": "Name",
            "Value": "master-us-east-1a.masters.apps.leiteiroapp.com",
            "PropagateAtLaunch": true
          },
          {
            "Key": "environment",
            "Value": "lab",
            "PropagateAtLaunch": true
          },
          {
            "Key": "k8s.io/role/master",
            "Value": "1",
            "PropagateAtLaunch": true
          },
          {
            "Key": "owner",
            "Value": "inovacao",
            "PropagateAtLaunch": true
          },
          {
            "Key": "scheduler:ec2-startstop",
            "Value": "1000;2200;utc;weekdays",
            "PropagateAtLaunch": true
          },
          {
            "Key": "solution",
            "Value": "tools",
            "PropagateAtLaunch": true
          }
        ]
      }
    },
    "AWSAutoScalingAutoScalingGroupnodesappsleiteiroappcom": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "LaunchConfigurationName": {
          "Ref": "AWSAutoScalingLaunchConfigurationnodesappsleiteiroappcom"
        },
        "MaxSize": 1,
        "MinSize": 1,
        "VPCZoneIdentifier": [
          {
            "Ref": "AWSEC2Subnetuseast1aappsleiteiroappcom"
          }
        ],
        "Tags": [
          {
            "Key": "KubernetesCluster",
            "Value": "apps.leiteiroapp.com",
            "PropagateAtLaunch": true
          },
          {
            "Key": "Name",
            "Value": "nodes.apps.leiteiroapp.com",
            "PropagateAtLaunch": true
          },
          {
            "Key": "environment",
            "Value": "lab",
            "PropagateAtLaunch": true
          },
          {
            "Key": "k8s.io/role/node",
            "Value": "1",
            "PropagateAtLaunch": true
          },
          {
            "Key": "owner",
            "Value": "inovacao",
            "PropagateAtLaunch": true
          },
          {
            "Key": "scheduler:ec2-startstop",
            "Value": "1000;2200;utc;weekdays",
            "PropagateAtLaunch": true
          },
          {
            "Key": "solution",
            "Value": "tools",
            "PropagateAtLaunch": true
          }
        ]
      }
    },
    "AWSAutoScalingLaunchConfigurationmasteruseast1amastersappsleiteiroappcom": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "AssociatePublicIpAddress": true,
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/xvda",
            "Ebs": {
              "VolumeType": "gp2",
              "VolumeSize": 64,
              "DeleteOnTermination": true
            }
          }
        ],
        "IamInstanceProfile": {
          "Ref": "AWSIAMInstanceProfilemastersappsleiteiroappcom"
        },
        "ImageId": "ami-08431d73",
        "InstanceType": "t2.micro",
        "KeyName": "kubernetes.apps.leiteiroapp.com-c3:5c:94:87:17:7d:23:2c:f7:05:65:06:8f:d6:93:89",
        "SecurityGroups": [
          {
            "Ref": "AWSEC2SecurityGroupmastersappsleiteiroappcom"
          }
        ],
        "UserData": "IyEvYmluL2Jhc2gKIyBDb3B5cmlnaHQgMjAxNiBUaGUgS3ViZXJuZXRlcyBBdXRob3JzIEFsbCByaWdodHMgcmVzZXJ2ZWQuCiMKIyBMaWNlbnNlZCB1bmRlciB0aGUgQXBhY2hlIExpY2Vuc2UsIFZlcnNpb24gMi4wICh0aGUgIkxpY2Vuc2UiKTsKIyB5b3UgbWF5IG5vdCB1c2UgdGhpcyBmaWxlIGV4Y2VwdCBpbiBjb21wbGlhbmNlIHdpdGggdGhlIExpY2Vuc2UuCiMgWW91IG1heSBvYnRhaW4gYSBjb3B5IG9mIHRoZSBMaWNlbnNlIGF0CiMKIyAgICAgaHR0cDovL3d3dy5hcGFjaGUub3JnL2xpY2Vuc2VzL0xJQ0VOU0UtMi4wCiMKIyBVbmxlc3MgcmVxdWlyZWQgYnkgYXBwbGljYWJsZSBsYXcgb3IgYWdyZWVkIHRvIGluIHdyaXR [...]
      }
    },
    "AWSAutoScalingLaunchConfigurationnodesappsleiteiroappcom": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "AssociatePublicIpAddress": true,
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/xvda",
            "Ebs": {
              "VolumeType": "gp2",
              "VolumeSize": 128,
              "DeleteOnTermination": true
            }
          }
        ],
        "IamInstanceProfile": {
          "Ref": "AWSIAMInstanceProfilenodesappsleiteiroappcom"
        },
        "ImageId": "ami-08431d73",
        "InstanceType": "t2.medium",
        "KeyName": "kubernetes.apps.leiteiroapp.com-c3:5c:94:87:17:7d:23:2c:f7:05:65:06:8f:d6:93:89",
        "SecurityGroups": [
          {
            "Ref": "AWSEC2SecurityGroupnodesappsleiteiroappcom"
          }
        ],
        "UserData": "IyEvYmluL2Jhc2gKIyBDb3B5cmlnaHQgMjAxNiBUaGUgS3ViZXJuZXRlcyBBdXRob3JzIEFsbCByaWdodHMgcmVzZXJ2ZWQuCiMKIyBMaWNlbnNlZCB1bmRlciB0aGUgQXBhY2hlIExpY2Vuc2UsIFZlcnNpb24gMi4wICh0aGUgIkxpY2Vuc2UiKTsKIyB5b3UgbWF5IG5vdCB1c2UgdGhpcyBmaWxlIGV4Y2VwdCBpbiBjb21wbGlhbmNlIHdpdGggdGhlIExpY2Vuc2UuCiMgWW91IG1heSBvYnRhaW4gYSBjb3B5IG9mIHRoZSBMaWNlbnNlIGF0CiMKIyAgICAgaHR0cDovL3d3dy5hcGFjaGUub3JnL2xpY2Vuc2VzL0xJQ0VOU0UtMi4wCiMKIyBVbmxlc3MgcmVxdWlyZWQgYnkgYXBwbGljYWJsZSBsYXcgb3IgYWdyZWVkIHRvIGluIHdyaXR [...]
      }
    },
    "AWSEC2DHCPOptionsappsleiteiroappcom": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "ec2.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ],
        "Tags": [
          {
            "Key": "KubernetesCluster",
            "Value": "apps.leiteiroapp.com"
          },
          {
            "Key": "Name",
            "Value": "apps.leiteiroapp.com"
          }
        ]
      }
    },
    "AWSEC2InternetGatewayappsleiteiroappcom": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "KubernetesCluster",
            "Value": "apps.leiteiroapp.com"
          },
          {
            "Key": "Name",
            "Value": "apps.leiteiroapp.com"
          }
        ]
      }
    },
    "AWSEC2Route00000": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "AWSEC2RouteTableappsleiteiroappcom"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "AWSEC2InternetGatewayappsleiteiroappcom"
        }
      }
    },
    "AWSEC2RouteTableappsleiteiroappcom": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "AWSEC2VPCappsleiteiroappcom"
        },
        "Tags": [
          {
            "Key": "KubernetesCluster",
            "Value": "apps.leiteiroapp.com"
          },
          {
            "Key": "Name",
            "Value": "apps.leiteiroapp.com"
          }
        ]
      }
    },
    "AWSEC2SecurityGroupEgressmasteregress": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "AWSEC2SecurityGroupmastersappsleiteiroappcom"
        },
        "FromPort": 0,
        "ToPort": 0,
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "AWSEC2SecurityGroupEgressnodeegress": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "AWSEC2SecurityGroupnodesappsleiteiroappcom"
        },
        "FromPort": 0,
        "ToPort": 0,
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "AWSEC2SecurityGroupIngressallmastertomaster": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "AWSEC2SecurityGroupmastersappsleiteiroappcom"
        },
        "SourceSecurityGroupId": {
          "Ref": "AWSEC2SecurityGroupmastersappsleiteiroappcom"
        },
        "FromPort": 0,
        "ToPort": 0,
        "IpProtocol": "-1"
      }
    },
    "AWSEC2SecurityGroupIngressallmastertonode": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "AWSEC2SecurityGroupnodesappsleiteiroappcom"
        },
        "SourceSecurityGroupId": {
          "Ref": "AWSEC2SecurityGroupmastersappsleiteiroappcom"
        },
        "FromPort": 0,
        "ToPort": 0,
        "IpProtocol": "-1"
      }
    },
    "AWSEC2SecurityGroupIngressallnodetonode": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "AWSEC2SecurityGroupnodesappsleiteiroappcom"
        },
        "SourceSecurityGroupId": {
          "Ref": "AWSEC2SecurityGroupnodesappsleiteiroappcom"
        },
        "FromPort": 0,
        "ToPort": 0,
        "IpProtocol": "-1"
      }
    },
    "AWSEC2SecurityGroupIngresshttpsexternaltomaster00000": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "AWSEC2SecurityGroupmastersappsleiteiroappcom"
        },
        "FromPort": 443,
        "ToPort": 443,
        "IpProtocol": "tcp",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "AWSEC2SecurityGroupIngressnodetomastertcp14000": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "AWSEC2SecurityGroupmastersappsleiteiroappcom"
        },
        "SourceSecurityGroupId": {
          "Ref": "AWSEC2SecurityGroupnodesappsleiteiroappcom"
        },
        "FromPort": 1,
        "ToPort": 4000,
        "IpProtocol": "tcp"
      }
    },
    "AWSEC2SecurityGroupIngressnodetomastertcp400365535": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "AWSEC2SecurityGroupmastersappsleiteiroappcom"
        },
        "SourceSecurityGroupId": {
          "Ref": "AWSEC2SecurityGroupnodesappsleiteiroappcom"
        },
        "FromPort": 4003,
        "ToPort": 65535,
        "IpProtocol": "tcp"
      }
    },
    "AWSEC2SecurityGroupIngressnodetomasterudp165535": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "AWSEC2SecurityGroupmastersappsleiteiroappcom"
        },
        "SourceSecurityGroupId": {
          "Ref": "AWSEC2SecurityGroupnodesappsleiteiroappcom"
        },
        "FromPort": 1,
        "ToPort": 65535,
        "IpProtocol": "udp"
      }
    },
    "AWSEC2SecurityGroupIngresssshexternaltomaster00000": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "AWSEC2SecurityGroupmastersappsleiteiroappcom"
        },
        "FromPort": 22,
        "ToPort": 22,
        "IpProtocol": "tcp",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "AWSEC2SecurityGroupIngresssshexternaltonode00000": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "AWSEC2SecurityGroupnodesappsleiteiroappcom"
        },
        "FromPort": 22,
        "ToPort": 22,
        "IpProtocol": "tcp",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "AWSEC2SecurityGroupmastersappsleiteiroappcom": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "AWSEC2VPCappsleiteiroappcom"
        },
        "GroupDescription": "Security group for masters",
        "Tags": [
          {
            "Key": "KubernetesCluster",
            "Value": "apps.leiteiroapp.com"
          },
          {
            "Key": "Name",
            "Value": "masters.apps.leiteiroapp.com"
          }
        ]
      }
    },
    "AWSEC2SecurityGroupnodesappsleiteiroappcom": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "AWSEC2VPCappsleiteiroappcom"
        },
        "GroupDescription": "Security group for nodes",
        "Tags": [
          {
            "Key": "KubernetesCluster",
            "Value": "apps.leiteiroapp.com"
          },
          {
            "Key": "Name",
            "Value": "nodes.apps.leiteiroapp.com"
          }
        ]
      }
    },
    "AWSEC2SubnetRouteTableAssociationuseast1aappsleiteiroappcom": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "AWSEC2Subnetuseast1aappsleiteiroappcom"
        },
        "RouteTableId": {
          "Ref": "AWSEC2RouteTableappsleiteiroappcom"
        }
      }
    },
    "AWSEC2Subnetuseast1aappsleiteiroappcom": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "AWSEC2VPCappsleiteiroappcom"
        },
        "CidrBlock": "172.20.32.0/19",
        "AvailabilityZone": "us-east-1a",
        "Tags": [
          {
            "Key": "KubernetesCluster",
            "Value": "apps.leiteiroapp.com"
          },
          {
            "Key": "Name",
            "Value": "us-east-1a.apps.leiteiroapp.com"
          },
          {
            "Key": "kubernetes.io/cluster/apps.leiteiroapp.com",
            "Value": "owned"
          }
        ]
      }
    },
    "AWSEC2VPCDHCPOptionsAssociationappsleiteiroappcom": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "AWSEC2VPCappsleiteiroappcom"
        },
        "DhcpOptionsId": {
          "Ref": "AWSEC2DHCPOptionsappsleiteiroappcom"
        }
      }
    },
    "AWSEC2VPCGatewayAttachmentappsleiteiroappcom": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "AWSEC2VPCappsleiteiroappcom"
        },
        "InternetGatewayId": {
          "Ref": "AWSEC2InternetGatewayappsleiteiroappcom"
        }
      }
    },
    "AWSEC2VPCappsleiteiroappcom": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.20.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "Tags": [
          {
            "Key": "KubernetesCluster",
            "Value": "apps.leiteiroapp.com"
          },
          {
            "Key": "Name",
            "Value": "apps.leiteiroapp.com"
          },
          {
            "Key": "kubernetes.io/cluster/apps.leiteiroapp.com",
            "Value": "owned"
          }
        ]
      }
    },
    "AWSEC2Volumeaetcdeventsappsleiteiroappcom": {
      "Type": "AWS::EC2::Volume",
      "Properties": {
        "AvailabilityZone": "us-east-1a",
        "Size": 20,
        "VolumeType": "gp2",
        "Encrypted": false,
        "Tags": [
          {
            "Key": "KubernetesCluster",
            "Value": "apps.leiteiroapp.com"
          },
          {
            "Key": "Name",
            "Value": "a.etcd-events.apps.leiteiroapp.com"
          },
          {
            "Key": "environment",
            "Value": "lab"
          },
          {
            "Key": "k8s.io/etcd/events",
            "Value": "a/a"
          },
          {
            "Key": "k8s.io/role/master",
            "Value": "1"
          },
          {
            "Key": "owner",
            "Value": "inovacao"
          },
          {
            "Key": "scheduler:ec2-startstop",
            "Value": "1000;2200;utc;weekdays"
          },
          {
            "Key": "solution",
            "Value": "tools"
          }
        ]
      }
    },
    "AWSEC2Volumeaetcdmainappsleiteiroappcom": {
      "Type": "AWS::EC2::Volume",
      "Properties": {
        "AvailabilityZone": "us-east-1a",
        "Size": 20,
        "VolumeType": "gp2",
        "Encrypted": false,
        "Tags": [
          {
            "Key": "KubernetesCluster",
            "Value": "apps.leiteiroapp.com"
          },
          {
            "Key": "Name",
            "Value": "a.etcd-main.apps.leiteiroapp.com"
          },
          {
            "Key": "environment",
            "Value": "lab"
          },
          {
            "Key": "k8s.io/etcd/main",
            "Value": "a/a"
          },
          {
            "Key": "k8s.io/role/master",
            "Value": "1"
          },
          {
            "Key": "owner",
            "Value": "inovacao"
          },
          {
            "Key": "scheduler:ec2-startstop",
            "Value": "1000;2200;utc;weekdays"
          },
          {
            "Key": "solution",
            "Value": "tools"
          }
        ]
      }
    },
    "AWSIAMInstanceProfilemastersappsleiteiroappcom": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [
          {
            "Ref": "AWSIAMRolemastersappsleiteiroappcom"
          }
        ]
      }
    },
    "AWSIAMInstanceProfilenodesappsleiteiroappcom": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [
          {
            "Ref": "AWSIAMRolenodesappsleiteiroappcom"
          }
        ]
      }
    },
    "AWSIAMPolicymastersappsleiteiroappcom": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyName": "masters.apps.leiteiroapp.com",
        "Roles": [
          {
            "Ref": "AWSIAMRolemastersappsleiteiroappcom"
          }
        ],
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecr:GetAuthorizationToken",
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:GetRepositoryPolicy",
                "ecr:DescribeRepositories",
                "ecr:ListImages",
                "ecr:BatchGetImage"
              ],
              "Effect": "Allow",
              "Resource": [
                "*"
              ]
            },
            {
              "Action": [
                "ec2:*"
              ],
              "Effect": "Allow",
              "Resource": [
                "*"
              ]
            },
            {
              "Action": [
                "elasticloadbalancing:*"
              ],
              "Effect": "Allow",
              "Resource": [
                "*"
              ]
            },
            {
              "Action": [
                "autoscaling:DescribeAutoScalingGroups",
                "autoscaling:DescribeAutoScalingInstances",
                "autoscaling:SetDesiredCapacity",
                "autoscaling:TerminateInstanceInAutoScalingGroup"
              ],
              "Effect": "Allow",
              "Resource": [
                "*"
              ]
            },
            {
              "Action": [
                "route53:ChangeResourceRecordSets",
                "route53:ListResourceRecordSets",
                "route53:GetHostedZone"
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:route53:::hostedzone/Z2DMNRJH630YC6"
              ]
            },
            {
              "Action": [
                "route53:GetChange"
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:route53:::change/*"
              ]
            },
            {
              "Action": [
                "route53:ListHostedZones"
              ],
              "Effect": "Allow",
              "Resource": [
                "*"
              ]
            },
            {
              "Action": [
                "s3:*"
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:s3:::com-leiteiroapp-kops-apps-state-store/apps.leiteiroapp.com",
                "arn:aws:s3:::com-leiteiroapp-kops-apps-state-store/apps.leiteiroapp.com/*"
              ]
            },
            {
              "Action": [
                "s3:GetBucketLocation",
                "s3:ListBucket"
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:s3:::com-leiteiroapp-kops-apps-state-store"
              ]
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "AWSIAMPolicynodesappsleiteiroappcom": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyName": "nodes.apps.leiteiroapp.com",
        "Roles": [
          {
            "Ref": "AWSIAMRolenodesappsleiteiroappcom"
          }
        ],
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ec2:Describe*"
              ],
              "Effect": "Allow",
              "Resource": [
                "*"
              ]
            },
            {
              "Action": [
                "ecr:GetAuthorizationToken",
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:GetRepositoryPolicy",
                "ecr:DescribeRepositories",
                "ecr:ListImages",
                "ecr:BatchGetImage"
              ],
              "Effect": "Allow",
              "Resource": [
                "*"
              ]
            },
            {
              "Action": [
                "route53:ChangeResourceRecordSets",
                "route53:ListResourceRecordSets",
                "route53:GetHostedZone"
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:route53:::hostedzone/Z2DMNRJH630YC6"
              ]
            },
            {
              "Action": [
                "route53:GetChange"
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:route53:::change/*"
              ]
            },
            {
              "Action": [
                "route53:ListHostedZones"
              ],
              "Effect": "Allow",
              "Resource": [
                "*"
              ]
            },
            {
              "Action": [
                "s3:*"
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:s3:::com-leiteiroapp-kops-apps-state-store/apps.leiteiroapp.com",
                "arn:aws:s3:::com-leiteiroapp-kops-apps-state-store/apps.leiteiroapp.com/*"
              ]
            },
            {
              "Action": [
                "s3:GetBucketLocation",
                "s3:ListBucket"
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:s3:::com-leiteiroapp-kops-apps-state-store"
              ]
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "AWSIAMRolemastersappsleiteiroappcom": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "RoleName": "masters.apps.leiteiroapp.com",
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "AWSIAMRolenodesappsleiteiroappcom": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "RoleName": "nodes.apps.leiteiroapp.com",
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    }
  }
}
